# patina

./: .gitignore  .patina_detect_ignore  CLAUDE.md  Cargo.toml  SKILL_AUDIT_REPORT.md
apps/patina-detect/detect/: Cargo.toml
apps/patina-detect/detect-tui/: Cargo.toml
apps/sam/cli/: Cargo.toml
apps/sam/core/: Cargo.toml
apps/sam/mcp/: Cargo.toml
apps/sam/settings/: Cargo.toml
apps/sam/tui/: Cargo.toml
diffviz-cli/: Cargo.toml  onboarding.md
diffviz-cli/src/: environment.rs  main.rs
diffviz-cli/src/commands/: debug.rs  diagnose.rs  display.rs  formatter.rs  mod.rs  review.rs  show.rs  templates.rs  validate.rs
diffviz-core/: CLAUDE.md  Cargo.toml  bugs.md  onboarding.md
diffviz-core/examples/: boundary_merging_demo.rs  c_reviewable_diff_demo.rs  c_reviewable_diff_demo_fixed.rs  cpp_reviewable_diff_demo.rs  formatter.rs  go_reviewable_diff_demo.rs  import_merging_demo.rs  java_debug.rs  java_reviewable_diff_demo.rs  line_range_demo.rs  python_reviewable_diff_demo.rs  renderable_line_range_demo.rs  reviewable_diff_demo.rs  semantic_partitioning_demo.rs  test_c_semantic_tree.rs  treesitter_ast_explorer.rs  typescript_reviewable_diff_demo.rs
diffviz-core/src/: common.rs  decision_based_diff.rs  lib.rs  reviewable_diff.rs  reviewable_diff_from_semantic.rs  semantic_ast.rs  semantic_unit_partitioner.rs
diffviz-core/src/ast_diff/: changes.rs  error.rs  merkle.rs  mod.rs  nodes.rs  source.rs  strategies.rs  tests.rs
diffviz-core/src/parsers/: c.rs  cpp.rs  css.rs  descriptor.rs  generic_builder.rs  go.rs  java.rs  javascript.rs  json.rs  mod.rs  python.rs  rust.rs  toml.rs  typescript.rs
diffviz-core/src/renderable_diff/: line_utils.rs  mod.rs  myers_diff.rs  name_extractors.rs  semantic_anchors.rs
diffviz-core/tests/: bug_class_bodies_have_no_semantic_children.rs  bug_crlf_byte_offset_drift.rs  bug_decompose_path_unchanged_units.rs  bug_deleted_boundary_reads_new_source.rs  bug_function_signature_pairing.rs  bug_issue_1.rs  bug_issue_2.rs  bug_issue_3.rs  bug_issue_java_error_message.rs  bug_javascript_error_message.rs  bug_line_range_column_zero_off_by_one.rs  bug_myers_diff_drops_duplicate_lines.rs  bug_parameter_count_includes_commas.rs  bug_parent_child_deletion_overlap.rs  bug_python_module_level_assignment_invisible.rs  bug_range_end_line_excluded.rs  bug_rust_impl_block_not_classified.rs  bug_rust_parser_visibility_modifier_classification.rs  bug_same_name_cross_container_pairing.rs  bug_struct_range_expansion.rs  bug_typescript_file_classification.rs  container_recursion_core_languages.rs  container_recursion_remaining_languages.rs  cpp_semantic_pairing_test.rs  debug_typescript_react.rs  diff_reconstruction.rs  java_semantic_pairing_test.rs  regression_cpp_enum_to_enum_class_pairing.rs  regression_rust_parser_visibility_modifier_classification.rs  regressions.rs  renderable_diff_anchor_tests.rs  rust_attribute_detection_test.rs  semantic_myers_test.rs  source_mismatch_tests.rs  test_utils.rs
diffviz-core/tests/regressions/: regression_rust_parser_visibility_modifier_classification.rs
diffviz-git/: Cargo.toml  onboarding.md
diffviz-git/src/: lib.rs
diffviz-git/tests/: error_handling.rs
diffviz-llm/: Cargo.toml
diffviz-review/: Cargo.toml  onboarding.md
diffviz-review-tui/: Cargo.toml  onboarding.md  simplification.md
diffviz-review-tui/docs/: leader-key-implementation-plan.md
diffviz-review-tui/examples/: review_navigator.rs
diffviz-review-tui/src/: app.rs  command.rs  decision_navigation.rs  error.rs  lib.rs  main.rs  navigation.rs  state.rs  state_snapshot.rs  theme.rs  theme_ext.rs
diffviz-review-tui/src/diff/: inline.rs
diffviz-review-tui/src/events/: bindings.rs  business.rs  input.rs  mod.rs
diffviz-review-tui/src/formatting/: diff_formatter.rs  mod.rs
diffviz-review-tui/src/test_harness/: combined.rs  input_parser.rs  input_test.rs  mod.rs  render_test.rs  snapshot.rs
diffviz-review-tui/src/ui/: icons.rs  layout.rs  mod.rs
diffviz-review-tui/tests/: agent_cli_tests.rs  core_navigation_tests.rs  decision_approval_tests.rs  decision_tree_expansion_tests.rs  dispatch_characterization_tests.rs  drillnav_approval_tests.rs  drillnav_navigation_tests.rs  drillnav_note_tests.rs  input_mode_tests.rs  keybinding_tests.rs  leader_key_tests.rs  panel_management_tests.rs  reasoning_annotation_tests.rs
diffviz-review-tui/tests/drillnav_common/: mod.rs
diffviz-review/src/: decision_log.template.yaml  errors.rs  lib.rs  persistence.rs  review_engine_builder.rs  review_engine_builder_tests.rs  summary.rs  templates.rs
diffviz-review/src/engines/: mod.rs  review_engine.rs
diffviz-review/src/entities/: approval.rs  cascade_result.rs  decision.rs  decision_instructions.rs  decision_tests.rs  git_ref.rs  instruction.rs  mod.rs  reviewable_diff_id.rs
diffviz-review/src/providers/: mock_provider.rs  mod.rs
diffviz-review/src/state/: mod.rs
diffviz-review/tests/: fixture_semantic_pair_validation.rs  semantic_pair_counter.rs
diffviz-review/tests/fixtures/: python_sync_to_async.json  rust_async_conversion.json  (+3 more)
hnsw/: .gitignore  CLAUDE.md  Cargo.toml  README.md
hnsw/benches/: comparative_baseline.rs  prefetch_baseline.rs
hnsw/scripts/: fetch_sift.sh
hnsw/src/: format_utils.rs  hnsw.rs  lib.rs  node.rs  prefetch.rs  simd_distances.rs  tape.rs  tape_mutations.rs
hnsw/tests/: debug_vectors.rs  persistence_phase1.rs
libs/gitkit/: Cargo.toml
libs/tui-elm/: Cargo.toml
maintenance/diffviz-core-lints/: .gitignore  Cargo.toml
sam-mcp/: Cargo.toml
sam-mcp/src/: loader.rs  resolver.rs  server.rs
sam-readers/: Cargo.toml
sam-settings/: Cargo.toml
sam-settings/src/: lib.rs  settings.rs
sam-tui/: Cargo.toml
sam-tui/examples/: modal_agent.rs
sam-tui/src/: error.rs  lib.rs  ui_v2.rs
sam-tui/tests/: agent_discovery_tests.rs  harness_tests.rs
tui-harness/: Cargo.toml
tui-harness/examples/: kitchen_sink.rs
tui-harness/src/: agent_cli.rs  combined.rs  error.rs  input_parser.rs  input_test.rs  lib.rs  manifest.rs  render_test.rs  runtime.rs  traits.rs
tui-harness/tests/: agent_cli_tests.rs
(+1008 files in other folders)
