[workspace]
resolver = "2"
members = [
  "diffviz-cli",
  "diffviz-review",
  "diffviz-core",
  "diffviz-review-tui",
  "libs/*",
  # sam
  "sam-cli",
  "sam-config",
  "sam-core",
  "sam-mcp",
  "sam-persistence",
  "sam-readers",
  "sam-terminals",
  "sam-tui",
]

[workspace.dependencies]
# internal crates
diffviz-core = { path = "diffviz-core" }
diffviz-review = { path = "diffviz-review" }
diffviz-review-tui = { path = "diffviz-review-tui" }
fsutils = { path = "libs/fsutils" }
gitkit = { path = "libs/gitkit" }
tui-design = { path = "libs/tui-design" }
tui-elm = { path = "libs/tui-elm" }
tui-harness = { path = "libs/tui-harness" }
sam-cli = { path = "sam-cli" }
sam-config = { path = "sam-config" }
sam-core = { path = "sam-core" }
sam-mcp = { path = "sam-mcp" }
sam-persistence = { path = "sam-persistence" }
sam-readers = { path = "sam-readers" }
sam-terminals = { path = "sam-terminals" }
sam-tui = { path = "sam-tui" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = { version = "0.10.9" }
log = "0.4.27"
tempfile = "3.8"
ratatui = "0.30"
crossterm = "0.29"
catppuccin = { version = "2.8.0", features = ["ratatui"] }
unicode-width = "0.2"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

[profile.bench]
debug = true
opt-level = 3
