[package]
name = "diffviz-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "diffviz"
path = "src/main.rs"

[dependencies]
diffviz-review = { path = "../diffviz-review" }
diffviz-review-tui = { path = "../diffviz-review-tui" }
diffviz-git = { path = "../diffviz-git" }
diffviz-core = { path = "../diffviz-core" }
diffviz-llm = { path = "../diffviz-llm" }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
whoami = "1.4"
tempfile = "3.8"
log4rs = "1.3.0"
log = "0.4"
tree-sitter = "0.20"
tree-sitter-go = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
