[package]
name = "diffviz-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "diffviz"
path = "src/main.rs"

[dependencies]
diffviz-review = { path = "../diffviz-review" }
diffviz-review-tui = { path = "../diffviz-review-tui" }
diffviz-core = { path = "../diffviz-core" }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
whoami = "1.4"
tempfile = { workspace = true }
log4rs = "1.3.0"
log = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
