[package]
name = "diffviz-core"
version = "0.1.0"
edition = "2024"


[lib]
doctest = true

[dependencies]
tree-sitter = "0.20"
tree-sitter-go = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-json = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-css = "0.20"
tree-sitter-toml = "0.20"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = "0.10"

