[package]
name = "diffviz-core"
version = "0.1.0"
edition = "2024"


[lib]
doctest = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-cpp = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
similar = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

