[package]
name = "diffviz-git"
version = "0.1.0"
edition = "2024"

[dependencies]
diffviz-review = { path = "../diffviz-review" }
diffviz-core = { path = "../diffviz-core" }
gitkit = { path = "../libs/gitkit" }
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
diffviz-review = { path = "../diffviz-review", features = ["test-utils"] }
git2 = "0.20"
tempfile = { workspace = true }
assert_matches = "1.5"
