[package]
name = "diffviz-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
diffviz-review = { path = "../diffviz-review" }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }