[package]
name = "diffviz-review-tui"
version = "0.1.0"
edition = "2024"
description = "Clean TUI for code review built on ReviewEngine architecture"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-harness = { path = "../tui-harness" }
anyhow = { workspace = true }
thiserror = { workspace = true }
diffviz-review = { path = "../diffviz-review" }
diffviz-core = { path = "../diffviz-core" }
diffviz-git = { path = "../diffviz-git" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
edtui = "0.8"
tui-design = { path = "../tui-design" }

[features]
test-harness = []

[[bin]]
name = "review-tui"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
