[package]
name = "diffviz-review"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
log = {workspace = true}
diffviz-core = { path = "../diffviz-core" }
diffviz-schema-macro = { path = "../diffviz-schema-macro" }

[dev-dependencies]
serde_json = { workspace = true }
