[package]
name = "diffviz-review"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
log = {workspace = true}
gitkit = { workspace = true }
diffviz-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
gitkit = { workspace = true, features = ["test-utils"] }
