[package]
name = "hnsw"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
wyrand.workspace = true
simsimd.workspace = true
rand_core.workspace = true
roaring = "0.11.2"
smallvec.workspace = true
memmap2.workspace = true
# Benchmark comparison dependencies (optional)
external-hnsw = { package = "hnsw_rs", version = "0.3.2", optional = true }
faiss = { version = "0.11.0", optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
usearch = "2.0"
tempfile.workspace = true

[[bench]]
name = "prefetch_baseline"
harness = false

[[bench]]
name = "comparative_baseline"
harness = false

[features]
default = []
bench-compare = ["external-hnsw", "faiss"]
