[package]
name = "sam-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sam-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "1"
sam-core = { workspace = true }
sam-persistence = { workspace = true }
sam-settings = { workspace = true }
termkit = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fuzzy-matcher = "0.3"
