[package]
name = "sam-readers"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-core = { workspace = true }
sam-persistence = { workspace = true }
thiserror = "2.0.12"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
