[package]
name = "sam-settings"
version = "1.3.0"
edition = "2021"

[dependencies]
sam-core = { workspace = true }
sam-persistence = { workspace = true }
fsutils = { workspace = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
toml = "0.8.23"
dirs = "6.0.0"
thiserror = "2.0.12"
