[package]
name = "sam-tui"
version = "1.3.0"
edition = "2021"

[dependencies]
sam-core = {path="../sam-core"}
sam-persistence = {path="../sam-persistence"}
sam-utils = {path="../sam-utils"}
sam-readers = {path="../sam-readers"}
sam-terminals = {path="../sam-terminals"}
thiserror = "2.0.12"
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-harness = { path = "../tui-harness" }
serde = { workspace = true }
serde_json = { workspace = true }
fzy-rs = "0.1.0"
