[workspace]

[package]
name = "diffviz_core_lints"
version = "0.1.0"
description = "Custom dylint lints enforcing diffviz-core's no-string/regex-parsing rule"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f6d310692116e9a527ce6d0b3526c965d9c5d7b9" }
dylint_linting = "6.0.1"

[dev-dependencies]
regex = "1"

[package.metadata.rust-analyzer]
rustc_private = true
