[package]
name = "patina-detect-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-harness = { workspace = true }
tui-design = { workspace = true }
tui-elm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
patina-detect = { workspace = true }
diffviz-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

[[bin]]
name = "triage-tui"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
