[package]
name = "patina-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
diffviz-core = { workspace = true }
lspkit = { workspace = true }
persistkit = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
