[package]
name = "patina-detect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "patina-detect"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ast-grep-config = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true, features = ["tree-sitter-rust"] }
clap = { version = "4.6", features = ["derive"] }
diffviz-core = { workspace = true }
lspkit = { workspace = true }
persistkit = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
