[package]
name = "patina-detect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "patina-detect"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ast-grep-config = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true, features = ["tree-sitter-rust"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = { workspace = true }
diffviz-core = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
lspkit = { workspace = true }
persistkit = { workspace = true }
ratatui = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tui-design = { workspace = true }
tui-elm = { workspace = true }
tui-harness = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
