[package]
name = "sam-cli"
version = "1.3.0"
edition = "2021"
# Example of customizing binaries in Cargo.toml.

[[bin]]
name = "sam"
path = "src/main.rs"

[dependencies]
sam-core = { workspace = true }
fsutils = { workspace = true }
sam-tui = { workspace = true }
sam-settings = { workspace = true }
sam-persistence = { workspace = true }
termkit = { workspace = true }
clap = "4.6"
thiserror = { workspace = true }
termion = "4.0.5"
toml = "0.8.23"
serde = { workspace = true }
dirs = { workspace = true }
tmux_interface = "0.3.2"
log = { workspace = true }
flexi_logger = "0.31.2"

[dev-dependencies]
maplit = "1.0.2"
