[package]
name = "sam-core"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
serde = { workspace = true }
thiserror = { workspace = true }
comma = "1.0.0"

[dev-dependencies]
serde_yaml = { workspace = true }
maplit = "1.0.2"
