[package]
name = "sam-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sam-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
sam-core = { workspace = true }
sam-persistence = { workspace = true }
sam-settings = { workspace = true }
termkit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
fuzzy-matcher = "0.3"
