[package]
name = "sam-settings"
version = "1.3.0"
edition = "2021"

[dependencies]
sam-core = { workspace = true }
sam-persistence = { workspace = true }
fsutils = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8.23"
dirs = { workspace = true }
thiserror = { workspace = true }
