[package]
name = "sam-tui"
version = "1.3.0"
edition = "2021"

[dependencies]
sam-core = { workspace = true }
sam-persistence = { workspace = true }
fsutils = { workspace = true }
sam-settings = { workspace = true }
termkit = { workspace = true }
thiserror = "2.0.12"
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-harness = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
fzy-rs = "0.1.0"
